@@ -1,6 +1,8 @@
 Changes between 2.0.5 and 2.0.6:
 --------------------------------
 
+Mac OS X:
+ * Fix subtitle rendering resolution when using OS X's native fullscreen mode
 
 Changes between 2.0.4 and 2.0.5:
 --------------------------------
